--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://photoswipe.com",
   "main": "dist/photoswipe.js",
+  "types": "dist/index.d.ts",
   "keywords": [
     "gallery",
     "lightbox",
